fix(ui): fix settings spinner alignment
Fix the alignment of the spinner in the settings tables.

Fixes: #2427.

--- a/ui/src/app/settings/components/SettingsTable/_index.scss
+++ b/ui/src/app/settings/components/SettingsTable/_index.scss
@@ -11,6 +11,7 @@
     background-color: rgba($color-light, 0.3);
     bottom: 0;
     display: grid;
+    justify-items: center;
     left: 0;
     position: absolute;
     right: 0;
